tests/paczka1/small_fuzzy/57214709.err
Error in line 7: GO76Q8PPz7U A869 30,1
Error in line 9: GO76Q8PPz7U A121 1,6
Error in line 12: JFskNT A190 36,3
